--- a/YPA/Views/DataTemplates/CellAlojamiento.xaml
+++ b/YPA/Views/DataTemplates/CellAlojamiento.xaml
@@ -3,119 +3,124 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:converter="clr-namespace:YPA.Views"
              mc:Ignorable="d"
-             x:Class="YPA.Views.DataTemplates.CellAlojamiento">
+             x:Class="YPA.Views.DataTemplates.CellAlojamiento" >
 
     <ViewCell.View>
 
-        <StackLayout Margin="5" BackgroundColor="Orange" MinimumHeightRequest="150">
-
-            <StackLayout Orientation="Horizontal" HeightRequest="40" MinimumHeightRequest="30" BackgroundColor="red">
-                <Label Text="nombreAlojamiento:" BackgroundColor="red" VerticalTextAlignment="Center" />
-                <Entry Text="{Binding nombreAlojamiento}"   HorizontalOptions="FillAndExpand" MaxLength="50" FontSize="Micro" />
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <StackLayout Orientation="Horizontal" HeightRequest="40" >
-                    <Label Text="direccion:"  VerticalTextAlignment="Center" />
-                    <Entry Text="{Binding direccion}"  HorizontalOptions="FillAndExpand" MaxLength="50" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HeightRequest="40" >
-                    <Label Text="tipo:"  VerticalTextAlignment="Center" />
-                    <Entry Text="{Binding tipo}"  HorizontalOptions="FillAndExpand" MaxLength="10"  />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HeightRequest="40" >
-                    <Label Text="subTipo:"  VerticalTextAlignment="Center" />
-                    <Entry Text="{Binding subTipo}"  HorizontalOptions="FillAndExpand" MaxLength="12" />
-                </StackLayout>
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <StackLayout Orientation="Horizontal" HeightRequest="40" >
-                    <Label Text="personaContacto:"  VerticalTextAlignment="Center" />
-                    <Entry Text="{Binding personaContacto}"  HorizontalOptions="FillAndExpand" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HeightRequest="40" >
-                    <Label Text="telefono1:"  VerticalTextAlignment="Center" />
-                    <Entry Text="{Binding telefono1}"  HorizontalOptions="FillAndExpand" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HeightRequest="40" >
-                    <Label Text="numPlazas:"  VerticalTextAlignment="Center" />
-                    <Entry Text="{Binding numPlazas}"  HorizontalOptions="FillAndExpand" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" HeightRequest="40" >
-                    <Label Text="precio:"  VerticalTextAlignment="Center" />
-                    <Entry Text="{Binding precio}"  HorizontalOptions="FillAndExpand" />
-                </StackLayout>
-            </StackLayout>
-
-            <Grid ColumnSpacing="20">
+        <StackLayout Margin="0,5,0,0" Padding="0" Spacing="2" BackgroundColor="#F5ED9F"  >
+            <StackLayout.Resources>
+                <ResourceDictionary>
+                    <converter:StringNullOrEmptyBoolConverter x:Key="labelVisible" />
+                </ResourceDictionary>
+            </StackLayout.Resources>
+            
+            <Grid ColumnSpacing="5" BackgroundColor="#F5B76B" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="20" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <Label Text="{Binding tipo}"  HorizontalOptions="FillAndExpand" TextColor="Green" Grid.Column="0" />
+                <Label x:Name="subTipoLabel" Text="{Binding subTipo}"  HorizontalOptions="FillAndExpand"  TextColor="black"  Grid.Column="1" 
+                       IsVisible="{Binding Source={x:Reference subTipoLabel}, Path=Text, Converter={StaticResource labelVisible}}" />
+                <Label Text="{Binding nombreAlojamiento}" Grid.Column="2" TextColor="#D20C24"  />
+                <Label Text="{Binding precio}"  HorizontalOptions="FillAndExpand" Grid.Column="3"  />
+                <Label Text="€" HorizontalOptions="FillAndExpand" Grid.Column="4" Padding="-5,0,0,0" />
+            </Grid>
+
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Dir:"  VerticalTextAlignment="Start" />
+                <Label Text="{Binding direccion}"  HorizontalOptions="FillAndExpand" />
+                <Label Text="Tel:"  HorizontalOptions="End" />
+                <Label Text="{Binding telefono1}"  HorizontalOptions="FillAndExpand" />
+                <Label Text="Plazas:"  VerticalTextAlignment="Center" HorizontalTextAlignment="End"/>
+                <Label Text="{Binding numPlazas}"  VerticalTextAlignment="Center" />
+
+            </StackLayout>
+
+
+            <Grid ColumnSpacing="15" RowSpacing="0" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="19" />
+                    <RowDefinition Height="19" />
+                    <RowDefinition Height="19" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
 
-                <StackLayout Orientation="Horizontal" Grid.Column="0" Grid.Row="0" >
-                    <CheckBox IsChecked="{Binding lavadero}" />
-                    <Label Text="lavadero" VerticalTextAlignment="Center" />
+
+                <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.Column="0" >
+                    <CheckBox IsChecked="{Binding lavadero}" Scale="0.5"  />
+                    <Label Text="lavadero" VerticalTextAlignment="Center"  />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="1" Grid.Row="0" >
-                    <CheckBox IsChecked="{Binding lavadora}" />
-                    <Label Text="lavadora" VerticalTextAlignment="Center" />
+                <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.Column="1" >
+                    <CheckBox IsChecked="{Binding lavadora}" Scale="0.5" />
+                    <Label Text="lavadora" VerticalTextAlignment="Center"  />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="2" Grid.Row="0" >
-                    <CheckBox IsChecked="{Binding secadora}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.Column="2" >
+                    <CheckBox IsChecked="{Binding secadora}" Scale="0.5" />
                     <Label Text="secadora" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="3" Grid.Row="0" >
-                    <CheckBox IsChecked="{Binding calefaccion}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.Column="3" >
+                    <CheckBox IsChecked="{Binding calefaccion}" Scale="0.5" />
                     <Label Text="calefaccion" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="4" Grid.Row="0" >
-                    <CheckBox IsChecked="{Binding cocina}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="1" Grid.Column="0" >
+                    <CheckBox IsChecked="{Binding cocina}" Scale="0.5" />
                     <Label Text="cocina" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="5" Grid.Row="0" >
-                    <CheckBox IsChecked="{Binding microondas}" />
-                    <Label Text="microondas" VerticalTextAlignment="Center" />
+                <StackLayout Orientation="Horizontal" Grid.Row="1" Grid.Column="1" >
+                    <CheckBox IsChecked="{Binding microondas}" Scale="0.5" />
+                    <Label Text="microondas" VerticalTextAlignment="Center"  />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="0" Grid.Row="1" >
-                    <CheckBox IsChecked="{Binding frigorifico}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="1" Grid.Column="2" >
+                    <CheckBox IsChecked="{Binding frigorifico}" Scale="0.5" />
                     <Label Text="frigorifico" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="1" Grid.Row="1" >
-                    <CheckBox IsChecked="{Binding maquinaBebidas}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="1" Grid.Column="3" >
+                    <CheckBox IsChecked="{Binding maquinaBebidas}" Scale="0.5" />
                     <Label Text="maquinaBebidas" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="2" Grid.Row="1" >
-                    <CheckBox IsChecked="{Binding jardin}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="2" Grid.Column="0" >
+                    <CheckBox IsChecked="{Binding jardin}" Scale="0.5" />
                     <Label Text="jardin" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="3" Grid.Row="1" >
-                    <CheckBox IsChecked="{Binding bicis}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="2" Grid.Column="1" >
+                    <CheckBox IsChecked="{Binding bicis}" Scale="0.5" />
                     <Label Text="bicis" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="4" Grid.Row="1" >
-                    <CheckBox IsChecked="{Binding mascotas}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="2" Grid.Column="2" >
+                    <CheckBox IsChecked="{Binding mascotas}" Scale="0.5" />
                     <Label Text="mascotas" VerticalTextAlignment="Center" />
                 </StackLayout>
-                <StackLayout Orientation="Horizontal" Grid.Column="5" Grid.Row="1" >
-                    <CheckBox IsChecked="{Binding wifi}" />
+                <StackLayout Orientation="Horizontal" Grid.Row="2" Grid.Column="3" >
+                    <CheckBox IsChecked="{Binding wifi}" Scale="0.5" />
                     <Label Text="wifi" VerticalTextAlignment="Center" />
                 </StackLayout>
+
             </Grid>
 
         </StackLayout>
     </ViewCell.View>
 </ViewCell>
 
+    
+    
+    
 <!--
     <StackLayout Orientation="Horizontal" HeightRequest="40" >
         <Label Text="observaciones:"  VerticalTextAlignment="Center" MinimumWidthRequest="80"/>
