--- a/YPA/Views/MainMasterDetail.xaml
+++ b/YPA/Views/MainMasterDetail.xaml
@@ -12,6 +12,7 @@
                 <Button Text="Poblaciones" Command="{Binding NavigateCommand}" CommandParameter="NavigationPage/Poblaciones" />
                 <Button Text="Alojamientos" Command="{Binding NavigateCommand}" CommandParameter="NavigationPage/Alojamientos" />
                 <Button Text="Caminos" Command="{Binding NavigateCommand}" CommandParameter="NavigationPage/Caminos" />
+                <Button Text="Ver" Command="{Binding NavigateCommand}" CommandParameter="NavigationPage/Ver" />
             </StackLayout>
         </ContentPage>
     </MasterDetailPage.Master>
