--- a/YPA/Views/VerCamino.xaml
+++ b/YPA/Views/VerCamino.xaml
@@ -29,51 +29,23 @@
     </ContentPage.Resources>
  -->
     <ContentPage.Content>
-        <ListView x:Name="listView" Margin="20" ItemSelected="OnItemSelected" >
-            <!--IsPullToRefreshEnabled="true" RefreshControlColor="Blue"  -->
+        <ListView x:Name="listView"
+              ItemsSource="{Binding listaEtapas, Mode=TwoWay}"
+              IsGroupingEnabled="False" 
+              RowHeight="50" SeparatorVisibility="None" BackgroundColor="#184BF2">
+
+            <ListView.Behaviors>
+                <prism:EventToCommandBehavior EventName="ItemTapped"
+                                          Command="{Binding ItemTappedCommand}"
+                                          EventArgsParameterPath="Item" />
+            </ListView.Behaviors>
+            
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <!-- <TextCell Text="{Binding nombreLargoCamino}" Detail="{Binding fecUltMod}" /> -->
                     <local:CellEtapaCamino/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-
-        <!--
-        <StackLayout BindingContext="{x:Static sys:DateTime.Now}"
-                 HorizontalOptions="Center"
-                 VerticalOptions="Center">
-
-            <Label Text="{Binding Year, StringFormat='The year is {0}'}" />
-            <Label Text="{Binding StringFormat='The month is {0:MMMM}'}" />
-            <Label Text="{Binding Day, StringFormat='The day is {0}'}" />
-            <Label Text="{Binding StringFormat='The time is {0:T}'}" />
-
-            <Label Text="ROTATION"
-               BindingContext="{x:Reference Name=slider}"
-               Rotation="{Binding Path=Value}"
-               FontAttributes="Bold"
-               FontSize="Large"
-               HorizontalOptions="Center"
-               VerticalOptions="CenterAndExpand" />
-
-            <Slider x:Name="slider"
-                Maximum="360"
-                VerticalOptions="CenterAndExpand" />
-
-            <Label BindingContext="{x:Reference slider}"
-               Text="{Binding Value, StringFormat='The angle is {0:F0} degrees'}"
-               FontAttributes="Bold"
-               FontSize="Large"
-               HorizontalOptions="Center"
-               VerticalOptions="CenterAndExpand" />
-
-            <Label Text="{Binding TablaCAMINOS[0].nombreLargoCamino, StringFormat='Vamos a poner el nombre largo: {0}  Adiossss'}" TextColor="red" />
-            <Entry Text="{Binding TablaCAMINOS[0].nombreLargoCamino}" TextColor="blue" />
-
-        </StackLayout>
--->
-
 
     </ContentPage.Content>
 </ContentPage>
