--- a/YPA/Views/VerCamino.xaml
+++ b/YPA/Views/VerCamino.xaml
@@ -32,7 +32,7 @@
         <ListView x:Name="listView"
               ItemsSource="{Binding listaEtapas, Mode=TwoWay}"
               IsGroupingEnabled="False" 
-              RowHeight="50" SeparatorVisibility="None" BackgroundColor="#184BF2">
+              RowHeight="50" SeparatorVisibility="None" BackgroundColor="#F8D878">
 
             <ListView.Behaviors>
                 <prism:EventToCommandBehavior EventName="ItemTapped"
