- Se añade el campo "acumulado" en la tabla TablaBaseCaminos pero es [Ignore].
- Se dejan de utilizar los Converter "Acumulado" y "PoblacionVisible".

- Se mejora en VerCaminoVM la función EstablecerVisibilidad().
Se crea un diccionario asociado a la lista en la que se guardan las bifurcaciones utilizadas.
Se deja de utilizar la función CalculaSiguientePoblacion().

--- a/YPA/Views/DataTemplates/CellEtapaCamino.xaml
+++ b/YPA/Views/DataTemplates/CellEtapaCamino.xaml
@@ -10,7 +10,8 @@
 
     <ViewCell.View>
         <StackLayout Orientation="Horizontal" Padding="0" Margin="10,0" Spacing="15"
-                     IsEnabled="{Binding nombrePoblacion, Converter={StaticResource poblacionVisible}}">
+                     IsEnabled="{Binding esVisible}" >
+                     <!-- IsEnabled="{Binding nombrePoblacion, Converter={StaticResource poblacionVisible}}"> -->
             <StackLayout.Resources>
                 <ResourceDictionary>
                     <converter:IntToColorStringConverter x:Key="intToColorString" />
@@ -32,7 +33,8 @@
             <Label Text="{Binding nombrePoblacion}" HorizontalOptions="Start" FontAttributes="Bold" MinimumWidthRequest="200"/>
             <Label Text="{Binding nodosSiguientes} " HorizontalOptions="Start" FontSize="12" />
             <Label Text="{Binding distanciaNodosSiguientes} " AnchorX="30" HorizontalOptions="End" />
-            <Label Text="{Binding distanciaNodosSiguientes, StringFormat='{0}km', Converter={StaticResource acumulado}}" AnchorX="30" HorizontalOptions="EndAndExpand" />
+            <Label Text="{Binding acumulado, StringFormat='{0}km'}" AnchorX="30" HorizontalOptions="EndAndExpand" />
+            <!-- <Label Text="{Binding distanciaNodosSiguientes, StringFormat='{0}km', Converter={StaticResource acumulado}}" AnchorX="30" HorizontalOptions="EndAndExpand" /> -->
         </StackLayout>
     </ViewCell.View>
 </ViewCell>
