- Añadidos los campos distanciaAlFinal y esEtapa en la tabla TablaBaseCaminos.
- En VerCaminoVM ya se puede elegir una bifurcación (RellenarLista()).
Se utiliza una copia de la listaEtapas (back_listaEtapas) sobre la que se hacen los cambios y luego sustituye a la que muestra el UI.

--- a/YPA/Views/DataTemplates/CellEtapaCamino.xaml
+++ b/YPA/Views/DataTemplates/CellEtapaCamino.xaml
@@ -10,6 +10,7 @@
 
     <ViewCell.View>
         <StackLayout Orientation="Horizontal" Padding="0" Margin="10,0" Spacing="15"
+                     IsVisible="{Binding esVisible}"
                      IsEnabled="{Binding esVisible}" >
                      <!-- IsEnabled="{Binding nombrePoblacion, Converter={StaticResource poblacionVisible}}"> -->
             <StackLayout.Resources>
@@ -30,9 +31,11 @@
                     </DataTrigger>
                 </Label.Triggers> -->
             </Label>
+            <CheckBox IsChecked="{Binding esEtapa}"  BackgroundColor="Cyan"/>
             <Label Text="{Binding nombrePoblacion}" HorizontalOptions="Start" FontAttributes="Bold" MinimumWidthRequest="200"/>
             <Label Text="{Binding nodosSiguientes} " HorizontalOptions="Start" FontSize="12" />
             <Label Text="{Binding distanciaNodosSiguientes} " AnchorX="30" HorizontalOptions="End" />
+            <Label Text="{Binding distanciaAlFinal, StringFormat='{0}km'}" AnchorX="30" HorizontalOptions="EndAndExpand" />
             <Label Text="{Binding acumulado, StringFormat='{0}km'}" AnchorX="30" HorizontalOptions="EndAndExpand" />
             <!-- <Label Text="{Binding distanciaNodosSiguientes, StringFormat='{0}km', Converter={StaticResource acumulado}}" AnchorX="30" HorizontalOptions="EndAndExpand" /> -->
         </StackLayout>
