- Database.cs: Nuevo métodos GetPoblacionesConAlbergue(camino), DameIdPoblacionDeNombre() y DamePoblacionesPorNombre()
- Tablas.cs: Nuevos campos en TablaBaseCaminos y con RaisePropertyChanged. Nuevas tablas  TablaSanabres y TablaFinisterre.

- PoblacionesVM: Modificado el OnNavigatedTo que será el que llame a CargarPoblacionesAsync() siempre y cuando no se llegue ahí en el modo BACK.
Antes se llamaba a CargarPoblacionesAsync desde el constructor PoblacionesViewModel().

- VerCaminoVM.cs: Ahora tenemos miLista donde se cargarán todas las poblaciones del camino la primera vez.
Se han añadido nuevos manejadores de comandos: OnCheckedChanged, VerPoblacion, VerAlbergues, LabelPulsada, CheckPulsado.
Modificado el RellenarLista().
Mejoras en RellenarLista().
Añadido el Converter SustituirPorCadenaVaciaConverter().

- VerVM.cs: En ExecuteOrdenarPor() se ha mejorado el ordenamiento por precio teniendo en cuenta los albergues con "D" de donativo.

- CellCamino.xaml: Ahora en lugar de un StackLayout tenemos un GridLayout.

- CellEtapaCamino.xaml: Se ha cambiado el StackLayout por un GridLayout. Se han añadido onuevos campos para el acumulado de etapa, el checkbox para marcar las etapas, etc...
El checkbox tiene un button transparente encima para utilizar su funcionalidad Command de forma que el usuario pincha en el checkbox pero internamente se dispara el Command del button.

--- a/YPA/Views/Caminos.xaml
+++ b/YPA/Views/Caminos.xaml
@@ -30,7 +30,7 @@
         <ListView x:Name="listView"
               ItemsSource="{Binding listaCaminos, Mode=TwoWay}"
               IsGroupingEnabled="False" 
-              RowHeight="50" SeparatorVisibility="None" BackgroundColor="Beige">
+              RowHeight="40" SeparatorVisibility="None" BackgroundColor="White">
 
             <ListView.Behaviors>
                 <prism:EventToCommandBehavior EventName="ItemTapped"
